--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" ?> 
 <project name="SNWebApp1" default="tomcat-start">
-
+	<property name="src" value="./src" />
+	<property name="lib" value="./WebContent/WEB-INF/lib" />
+	<property name="classes" value="./build/classes" />
+	<property name="test.class.name" value="com.starnumber.util.AllTests" />
+	
+	<path id="test.classpath">
+	  <pathelement location="${classes}" />
+	  <pathelement location="./WebContent/WEB-INF/lib/junit-4.8.1.jar" />
+	  <fileset dir="${lib}">
+	    <include name="**/*.jar"/>
+	  </fileset>
+	</path>	
+	
 	<path id="compile.classpath">
 		<fileset dir="WebContent/WEB-INF/lib">
 			<include name="*.jar"/>
 		</fileset>
 	</path>
+	
+	
 	
 	<target name="init">
 		<mkdir dir="build/classes"/>
@@ -18,8 +32,16 @@
 			<classpath refid="compile.classpath"/>
 		</javac>
 	</target>
+
+	<target name="test">
+	  <junit fork="yes" haltonfailure="yes">
+	    <test name="${test.class.name}" />
+	    <formatter type="plain" usefile="false" />
+	    <classpath refid="test.classpath" />
+	  </junit >
+	</target>	
 	
-	<target name="war" depends="compile">
+	<target name="war" depends="compile, test">
 		<war destfile="dist/SNWebApp.war" webxml="WebContent/WEB-INF/web.xml">
 			<fileset dir="WebContent"/>
 			<lib dir="WebContent/WEB-INF/lib"/>
