Various small changes to keep things working: changed web.xml to reflect existence of new servlets. Changed the XML and XSD for Starnumber data description.  Moved around the XSD file.  Added a servlet.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,6 +26,17 @@
     <url-pattern>/KamServlet</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>CentralDBXMLServlet</servlet-name>
+    <servlet-class>com.starnumber.util.CentralDBXMLServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>CentralDBXMLServlet</servlet-name>
+    <url-pattern>/CentralDBServlet</url-pattern>
+  </servlet-mapping>
+
+
   <welcome-file-list>
     <welcome-file>
       jsp/index.jsp
